# mpact-compiler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
.github/workflows/: build-and-test.yml  cmake-multi-platform.yml  format.yml  pylint.yml  regression-benchmark.yml
benchmark/: CMakeLists.txt  README.md
benchmark/python/benchmarks/: gcn_benchmark.py  kernels_benchmark.py  lif_benchmark.py  regression_benchmark.py  resnet_benchmark.py
benchmark/python/manual/: README.md  sum_of_sq.py
benchmark/python/utils/: benchmark_utils.py  profiler.py  tensor_generator.py
dev/bench/: data.js
include/: CMakeLists.txt
include/mpact-c/: Registration.h
include/mpact/Transforms/: CMakeLists.txt  Passes.h  Passes.td
include/mpact/Transforms/Sparsity/: SparseEncodingPropagate.h
lib/: CMakeLists.txt
lib/CAPI/: CMakeLists.txt  Registration.cpp
lib/Transforms/: CMakeLists.txt  Passes.cpp
lib/Transforms/Sparsity/: CMakeLists.txt  SparseEncodingPropagate.cpp
python/: CMakeLists.txt  MPACTModule.cpp
python/mpact/: mpactbackend.py
python/mpact/models/: gat.py  gcn.py  kernels.py  lif.py  resnet.py  train.py
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/python/: add.py  counteq.py  file_formats.py  gat.py  gcn.py  lif.py  mm.py  mm_print.py  mul.py  norm.py  parallel.py  resnet.py  scale.py  sddmm.py  sparse_gcn.py  sparse_lif.py  spmv.py  sqsum.py  train_simple.py
tools/: CMakeLists.txt
tools/mpact-opt/: CMakeLists.txt  mpact_opt.cpp
